--- a/E-EstateV2/src/app/add-rubber-stock/add-rubber-stock.component.html
+++ b/E-EstateV2/src/app/add-rubber-stock/add-rubber-stock.component.html
@@ -1,5 +1,5 @@
 <div style="padding: 20px;" class="box-container">
-  <h1>{{estate.name}}</h1>
+  <h1>{{estate.add1.slice(0, -1)}}</h1>
   <hr>
 
   <!-- <div class="monthYear" *ngIf="stock.id == undefined">
