--- a/E-EstateV2/src/app/cost-info/cost-info.component.html
+++ b/E-EstateV2/src/app/cost-info/cost-info.component.html
@@ -1,15 +1,16 @@
 <div class="box-container">
-  <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
+  <!-- <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
     [theme]="{height:'20px', width:'50px'}"> </ngx-skeleton-loader>
-  <h1>{{estate.name}}</h1>
+  <h1>{{estate.name}}</h1> -->
+  <h1>Cost Information</h1>
 
   <hr />
 
-  <h1>Cost Information</h1>
+  <!-- <h1>Cost Information</h1> -->
 
 
-  <span style="color: #DC4C64;font-weight: bold;">**All information is from January to December of the selected year &
-    specific for RUBBER only</span>
+  <!-- <span style="color: #DC4C64;font-weight: bold;">**All information is from January to December of the selected year &
+    specific for RUBBER only</span> -->
 
 
   <form style="margin-top: 10px;">
