--- a/E-EstateV2/src/app/monthly-form/labor-info-monthly/labor-info-monthly.component.html
+++ b/E-EstateV2/src/app/monthly-form/labor-info-monthly/labor-info-monthly.component.html
@@ -25,13 +25,13 @@
   <div style="columns: 2">
     <label>No of Checkrole Tapper :</label>
     <input type="number" name="tapperCheckrole" [(ngModel)]="labor.tapperCheckrole" />
-    <label>No of Employed Tapper :</label>
+    <label>No.of Tappers Employed by Contractors :</label>
     <input type="number" name="tapperContractor" [(ngModel)]="labor.tapperContractor" />
   </div>
   <div style="columns: 2">
     <label>No of Checkrole Field Worker :</label>
     <input type="number" name="fieldCheckrole" [(ngModel)]="labor.fieldCheckrole" />
-    <label>No of Employed Field Worker :</label>
+    <label>No.of Field Workers Employed by Contractors :</label>
     <input type="number" name="fieldContractor" [(ngModel)]="labor.fieldContractor" />
   </div>
 
