--- a/E-EstateV2/src/app/rubber-sale/rubber-sales.component.html
+++ b/E-EstateV2/src/app/rubber-sale/rubber-sales.component.html
@@ -1,10 +1,12 @@
 <div class="box-container">
-  <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
+  <!-- <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
     [theme]="{height:'20px', width:'50px'}"> </ngx-skeleton-loader>
-  <h1>{{estate.name}}</h1>
+  <h1>{{estate.name}}</h1> -->
+  <h1>Rubber Sale Information</h1>
+
   <hr />
 
-  <h1>Rubber Sale Information</h1>
+  <!-- <h1>Rubber Sale Information</h1> -->
 
 
   <div class="box-container">
