--- a/E-EstateV2/src/app/_layout/login-layout/login-layout.component.html
+++ b/E-EstateV2/src/app/_layout/login-layout/login-layout.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar>
   <mat-toolbar-row routerLink="/login" style="cursor: pointer;">
-    <span class="span"><img width="50px" style="padding: 5px; margin-top: 10px;"
+    <span class="span"><img width="40px" style="padding: 5px;"
         src="assets/Images/LGM-logo.png" /></span>
-    <span style="font-size: 25px; margin-top:-2px">Malaysian Rubber Board</span> <br />
+    <span style="font-size: 20px; margin-top:-12px">Malaysian Rubber Board</span> <br />
   </mat-toolbar-row>
 </mat-toolbar>
 
