--- a/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
+++ b/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
@@ -111,8 +111,8 @@
   <hr>
 
   <div style="columns: 2" class="column">
-    <label>Land title (Grant No) :</label>
-    <input type="text" name="ownershipNo" [(ngModel)]="estateDetail.grantNo" />
+    <!-- <label>Land title (Grant No) :</label>
+    <input type="text" name="ownershipNo" [(ngModel)]="estateDetail.grantNo" /> -->
     <label>Planting Material :</label>
     <mat-select name="platingMaterial" placeholder="Please Choose" [(ngModel)]="estateDetail.plantingMaterialId">
       <mat-option *ngFor="let planting of filterPlantingMaterial" [value]="planting.id">
