--- a/E-EstateV2/src/app/login/login.component.css
+++ b/E-EstateV2/src/app/login/login.component.css
@@ -1,17 +1,16 @@
 .container {
   background-color: #fff;
-  border-radius: 55px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
   width: 65%;
-  height: 465px;
+  height: 380px;
 }
 
 .form-container {
   padding: 18px;
   position: absolute;
-  height: 100%;
+  height: 94%;
   width: 28%;
   background-color: ghostwhite;
   display: flex;
@@ -28,7 +27,7 @@ button {
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
-  padding: 12px 45px;
+  padding: 7px 25px;
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
@@ -38,7 +37,7 @@ button {
 .overlay-container {
   position: absolute;
   top: 0;
-  left: 30%;
+  left: 31%;
   width: 70%;
   height: 100%;
   overflow: hidden;
@@ -62,7 +61,7 @@ button {
   color: black;
   background-color: ghostwhite;
   border: none;
-  margin-top: 50px;
+  margin-top: 3px;
 }
 
 .contact-menu {
@@ -90,3 +89,13 @@ input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
   display: none;
 }
+
+input[type="text"], input[type="password"]{
+  padding: 6px 9px;
+}
+
+/* @media (max-width: 768px) {
+  .overlay-container {
+    display: none;
+  }
+} */
