--- a/E-EstateV2/src/app/monthly-form/monthly-form.component.html
+++ b/E-EstateV2/src/app/monthly-form/monthly-form.component.html
@@ -1,8 +1,9 @@
 <div class="box-container">
 
-  <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
+  <!-- <ngx-skeleton-loader *ngIf="isLoading" appearance="line" animation="progress-dark"
     [theme]="{height:'20px', width:'50px'}"> </ngx-skeleton-loader>
-  <h1>{{estate.name}}</h1>
+  <h1>{{estate.name}}</h1> -->
+  <h1>Monthly Form</h1>
 
   <mat-tab-group mat-align-tabs="center" #tabGroup>
     <mat-tab label="Production" [disabled]="isProductionTabDisabled" style="color:red">
