--- a/E-EstateV2/src/app/register/register.component.css
+++ b/E-EstateV2/src/app/register/register.component.css
@@ -1,6 +1,5 @@
 .container {
   background-color: #fff;
-  border-radius: 55px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
@@ -20,7 +19,7 @@ button {
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
-  padding: 12px 45px;
+  padding: 7px 25px;
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
@@ -67,5 +66,9 @@ button:disabled {
 }
 
 h1 {
-  font-size: 25px !important;
+  font-size: 20px !important;
+}
+
+span{
+  font-size: 11px;
 }
