--- a/E-EstateV2/src/app/forgot-password/forgot-password.component.html
+++ b/E-EstateV2/src/app/forgot-password/forgot-password.component.html
@@ -22,12 +22,23 @@
       <br />
 
       <form *ngIf="isForgotPassword">
-        <div style="text-align: left;" class="password-toggle">
+        <div class="column">
           <label>New Password :</label>
-          <input type="{{ showPassword ? 'text' : 'password' }}" name="password" [(ngModel)]="register.newPassword" />
-          <span (click)="togglePasswordVisibility()">
-            <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
-          </span>
+          <div class="password-toggle">
+            <input type="{{ showPassword ? 'text' : 'password' }}" name="password" [(ngModel)]="register.newPassword" />
+            <span (click)="togglePasswordVisibility()">
+              <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
+            </span>
+          </div>
+
+          <label>Confirm Password :</label>
+          <div class="password-toggle">
+            <input type="{{ showPassword ? 'text' : 'password' }}" name="confirmPassword"
+              [(ngModel)]="register.confirmPassword" (change)="checkingPassword()" />
+            <span (click)="togglePasswordVisibility()">
+              <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
+            </span>
+          </div>
         </div>
 
         <button style="float: right;" class="btn-add" (click)="submitNewPassword()">Submit &nbsp; <i
