--- a/E-EstateV2/src/app/monthly-form/field-production-monthly/field-production-monthly.component.html
+++ b/E-EstateV2/src/app/monthly-form/field-production-monthly/field-production-monthly.component.html
@@ -73,6 +73,8 @@
           <i class="fa fa-pencil"></i> Draft
         </ng-template><br />
 
+        <span style="color: red;">*Make sure field completed before submit</span>
+
         <table style="width: 100%">
           <tr>
             <th>Month and Year</th>
